--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ opencv = { version = "0.92.0", features = ["clang-runtime"] }
 [build-dependencies]
 cc = "1.1.5"
 bindgen = "0.69.4"
+pkg-config = "0.3.19"
 
 [package.metadata]
 build = "build.rs"
