--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2.155"
+log = "0.4.22"
+env_logger = "0.11.4"
 clap = { version = "4.5.10", features = ["derive"] }
 opencv = { version = "0.92.1", features = ["clang-runtime"] }
 
