--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ log = "0.4.22"
 env_logger = "0.11.4"
 clap = { version = "4.5.10", features = ["derive"] }
 opencv = { version = "0.92.1", features = ["clang-runtime"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 cc = "1.1.6"
